--- a/SecondWeek/app/src/main/res/layout/activity_main.xml
+++ b/SecondWeek/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -6,50 +6,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:id="@+id/sectTopBar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="13.1">
-
-                <com.google.android.material.appbar.AppBarLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/topAppBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/black"
-                    app:title="@string/app_name"
-                    app:menu="@menu/top_menu"
-                    app:navigationIcon="@drawable/menu"
-                    style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
-
-            </com.google.android.material.appbar.AppBarLayout>
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-            <FrameLayout
-                android:id="@+id/content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -59,27 +31,93 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-<!--            ФреймЛэйаут с контентом для урока с Bottom navigation-->
-<!--            <FrameLayout-->
-<!--                android:id="@+id/content"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"/>-->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNav"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/black"
+                android:elevation="16dp"
+                app:itemIconTint="@color/color_tab"
+                app:itemTextColor="@color/color_tab"
+                app:menu="@menu/bottom_menu" />
 
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNav"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/black"
-            android:elevation="16dp"
-            app:itemIconTint="@color/color_tab"
-            app:itemTextColor="@color/color_tab"
-            app:menu="@menu/bottom_menu"/>
+            <!--MaterialCardView должен находиться в CoordinatorLayout-->
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
+            android:layout_width="336dp"
+            android:layout_height="200dp"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:strokeWidth="1dp"
+            app:strokeColor="@android:color/white"
+            app:cardElevation="0dp"
+            android:focusable="true"
+            android:checkable="true">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/baner">
+
+                <Button
+                    android:id="@+id/buttonMovie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginRight="20dp"
+                    android:backgroundTint="@color/orange"
+                    android:textColor="@color/black"
+                    android:text="@string/play"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/nameMovie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:padding="10dp"
+                    android:text="@string/finch"
+                    android:background="@color/black"
+                    android:textColor="@color/white"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/actorsMovie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:padding="10dp"
+                    android:text="@string/actors"
+                    android:background="@color/black"
+                    android:textColor="@color/white"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/longMovie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:padding="10dp"
+                    android:text="@string/longMovies"
+                    android:background="@color/black"
+                    android:textColor="@color/white"/>
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
