--- a/SecondWeek/app/src/main/res/layout/activity_main.xml
+++ b/SecondWeek/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,14 @@
         tools:context=".MainActivity">
 
 
-        <FrameLayout
-            android:id="@+id/content"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+<!--        <FrameLayout-->
+<!--            android:id="@+id/content"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 
 
@@ -41,19 +40,21 @@
                 app:itemTextColor="@color/color_tab"
                 app:menu="@menu/bottom_menu" />
 
-
-            <!--MaterialCardView должен находиться в CoordinatorLayout-->
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+
+
+        <!--Внутри MaterialCardView должен находиться ConstraintLayout-->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
             android:layout_width="336dp"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:layout_margin="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+
             app:strokeWidth="1dp"
             app:strokeColor="@android:color/white"
             app:cardElevation="0dp"
@@ -70,13 +71,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginRight="20dp"
-                    android:backgroundTint="@color/orange"
-                    android:textColor="@color/black"
-                    android:text="@string/play"/>
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="10dp"
+                    android:backgroundTint="@color/play"
+                    android:textColor="@color/white"
+                    android:text="@string/watch"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/nameMovie"
@@ -86,8 +86,12 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:padding="10dp"
                     android:text="@string/finch"
-                    android:background="@color/black"
-                    android:textColor="@color/white"/>
+                    android:background="@drawable/background_rounded"
+                    android:textColor="@color/white"
+                    app:emojiCompatEnabled="true"
+                    android:radius="5dp"
+                    android:topRightRadius="100dp"
+                    />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/actorsMovie"
@@ -97,7 +101,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:padding="10dp"
                     android:text="@string/actors"
-                    android:background="@color/black"
+                    android:background="@drawable/background_rounded"
                     android:textColor="@color/white"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -108,7 +112,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:padding="10dp"
                     android:text="@string/longMovies"
-                    android:background="@color/black"
+                    android:background="@drawable/background_rounded"
                     android:textColor="@color/white"/>
 
 
