--- a/RoomRecyclerView/app/src/main/res/layout/tab_panel.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/tab_panel.xml
@@ -6,7 +6,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TabPanel">
+        tools:context=".tabs.TabPanel">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
