--- a/RoomRecyclerView/app/src/main/res/values/colors.xml
+++ b/RoomRecyclerView/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">@android:color/holo_orange_dark</color>
+    <color name="primaryPressed">#78E0F3</color>
+    <color name="primaryFocused">#FF5722</color>
+
 </resources>
