--- a/ViewPagerHomeWork/app/src/main/res/layout/transformers.xml
+++ b/ViewPagerHomeWork/app/src/main/res/layout/transformers.xml
@@ -19,14 +19,14 @@
                 android:layout_width="336dp"
                 android:layout_height="200dp"
                 android:layout_margin="20dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:checkable="true"
+                android:focusable="true"
+                app:cardElevation="0dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:strokeWidth="1dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:strokeColor="@android:color/white"
-                app:cardElevation="0dp"
-                android:focusable="true"
-                android:checkable="true">
+                app:strokeWidth="1dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -37,23 +37,23 @@
                         android:id="@+id/containedIconButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:layout_marginBottom="20dp"
                         android:layout_marginRight="20dp"
+                        android:layout_marginBottom="20dp"
                         android:backgroundTint="@color/orange"
+                        android:text="@string/play"
                         android:textColor="@color/black"
-                        android:text="@string/play"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@color/black"
                         android:padding="10dp"
                         android:text="@string/transformers"
-                        android:background="@color/black"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
