Added changes in TabProducts.kt

--- a/RoomRecyclerView/app/src/main/res/layout/tab_categories.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/tab_categories.xml
@@ -19,7 +19,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
                 android:text="@string/deleteAllCategories"
-                android:background="@color/orange"
+                android:background="#FFBF00"
                 android:textColor="@color/black"/>
 
             <androidx.recyclerview.widget.RecyclerView
