--- a/RoomRecyclerView/app/src/main/res/color/button_selector.xml
+++ b/RoomRecyclerView/app/src/main/res/color/button_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/primaryPressed" android:state_pressed="true"/>
-    <item android:color="@color/primaryFocused" android:state_focused="true"/>
-    <item android:color="#607354"/>
+    <item android:color="#F1F1F1" android:state_pressed="true"/>
+
+    <item android:color="#E4E4E4"/>
 </selector>
