--- a/RoomRecyclerView/app/src/main/res/color/color_tab.xml
+++ b/RoomRecyclerView/app/src/main/res/color/color_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@android:color/holo_orange_dark" android:state_selected="true"/>
-    <item android:color="@color/white" android:state_selected="false"/>
+    <item android:color="#FFBF00" android:state_selected="true"/>
+    <item android:color="#E4E4E4" android:state_selected="false"/>
 </selector>
