--- a/RoomRecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#F6F7F8"/>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -27,7 +28,7 @@
                 android:id="@+id/bottomNav"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/black"
+                android:background="#272727"
                 android:elevation="16dp"
                 app:itemIconTint="@color/color_tab"
                 app:itemTextColor="@color/color_tab"
