--- a/RoomRecyclerView/app/src/main/res/layout/category_item.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/category_item.xml
@@ -11,7 +11,7 @@
             android:id="@+id/contentCardCategory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/orange">
+            android:background="#E4E4E4">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/idCategory"
