--- a/RoomRecyclerView/app/src/main/res/layout/panel_edit_category.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/panel_edit_category.xml
@@ -47,7 +47,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textCursorDrawable="@drawable/cursor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
