--- a/RoomRecyclerView/app/src/main/res/layout/panel_edit_product.xml
+++ b/RoomRecyclerView/app/src/main/res/layout/panel_edit_product.xml
@@ -33,11 +33,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             app:layout_constraintTop_toBottomOf="@id/headerEditProduct"
             android:layout_margin="10dp"
             app:boxBackgroundColor="@android:color/transparent"
-            app:boxStrokeColor="@android:color/white"
-            app:startIconTint="@android:color/white"
+            app:boxStrokeColor="@color/black"
+            app:startIconTint="@color/black"
             app:endIconTint="@android:color/holo_red_light"
             android:hint="@string/labelEnterNameProduct"
-            app:hintTextColor="@android:color/white"
+            app:hintTextColor="@color/black"
             app:startIconDrawable="@drawable/catalog_categories"
             app:endIconMode="clear_text"
             app:boxStrokeWidthFocused="4dp">
@@ -47,7 +47,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textCursorDrawable="@drawable/cursor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -60,11 +60,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             app:layout_constraintTop_toBottomOf="@id/sectionEditNameProduct"
             android:layout_margin="10dp"
             app:boxBackgroundColor="@android:color/transparent"
-            app:boxStrokeColor="@android:color/white"
-            app:startIconTint="@android:color/white"
+            app:boxStrokeColor="@color/black"
+            app:startIconTint="@color/black"
             app:endIconTint="@android:color/holo_red_light"
             android:hint="@string/labelEnterNumberCategory"
-            app:hintTextColor="@android:color/white"
+            app:hintTextColor="@color/black"
             app:startIconDrawable="@drawable/catalog_products"
             app:endIconMode="clear_text"
             app:boxStrokeWidthFocused="4dp">
@@ -74,7 +74,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textCursorDrawable="@drawable/cursor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -86,11 +86,11 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryProduct"
             android:layout_margin="10dp"
             app:boxBackgroundColor="@android:color/transparent"
-            app:boxStrokeColor="@android:color/white"
-            app:startIconTint="@android:color/white"
+            app:boxStrokeColor="@color/black"
+            app:startIconTint="@color/black"
             app:endIconTint="@android:color/holo_red_light"
             android:hint="@string/labelEnterPriceProduct"
-            app:hintTextColor="@android:color/white"
+            app:hintTextColor="@color/black"
             app:startIconDrawable="@drawable/price"
             app:endIconMode="clear_text"
             app:boxStrokeWidthFocused="4dp">
@@ -100,7 +100,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textCursorDrawable="@drawable/cursor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -146,7 +146,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_marginTop="20dp"
             android:text="@string/editProduct"
             android:background="@color/black"
-            android:textColor="@color/orange"/>
+            android:textColor="#FFBF00"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
