--- a/MysqlRecycler/app/src/main/res/layout/panel_edit_product.xml
+++ b/MysqlRecycler/app/src/main/res/layout/panel_edit_product.xml
@@ -11,7 +11,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/orange"
+            android:background="#E4E4E4"
             android:padding="10dp">
 
 
@@ -33,11 +33,11 @@
                 app:layout_constraintTop_toBottomOf="@id/headerEditProduct"
                 android:layout_margin="10dp"
                 app:boxBackgroundColor="@android:color/transparent"
-                app:boxStrokeColor="@android:color/white"
-                app:startIconTint="@android:color/white"
+                app:boxStrokeColor="@color/black"
+                app:startIconTint="@color/black"
                 app:endIconTint="@android:color/holo_red_light"
                 android:hint="@string/labelEnterNameProduct"
-                app:hintTextColor="@android:color/white"
+                app:hintTextColor="@color/black"
                 app:startIconDrawable="@drawable/catalog_categories"
                 app:endIconMode="clear_text"
                 app:boxStrokeWidthFocused="4dp">
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/black"
                     android:textCursorDrawable="@drawable/cursor"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -60,11 +60,11 @@
                 app:layout_constraintTop_toBottomOf="@id/sectionEditNameProduct"
                 android:layout_margin="10dp"
                 app:boxBackgroundColor="@android:color/transparent"
-                app:boxStrokeColor="@android:color/white"
-                app:startIconTint="@android:color/white"
+                app:boxStrokeColor="@color/black"
+                app:startIconTint="@color/black"
                 app:endIconTint="@android:color/holo_red_light"
                 android:hint="@string/labelEnterNumberCategory"
-                app:hintTextColor="@android:color/white"
+                app:hintTextColor="@color/black"
                 app:startIconDrawable="@drawable/catalog_products"
                 app:endIconMode="clear_text"
                 app:boxStrokeWidthFocused="4dp">
@@ -74,7 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/black"
                     android:textCursorDrawable="@drawable/cursor"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -86,11 +86,11 @@
                 app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryProduct"
                 android:layout_margin="10dp"
                 app:boxBackgroundColor="@android:color/transparent"
-                app:boxStrokeColor="@android:color/white"
-                app:startIconTint="@android:color/white"
+                app:boxStrokeColor="@color/black"
+                app:startIconTint="@color/black"
                 app:endIconTint="@android:color/holo_red_light"
                 android:hint="@string/labelEnterPriceProduct"
-                app:hintTextColor="@android:color/white"
+                app:hintTextColor="@color/black"
                 app:startIconDrawable="@drawable/price"
                 app:endIconMode="clear_text"
                 app:boxStrokeWidthFocused="4dp">
@@ -100,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/black"
                     android:textCursorDrawable="@drawable/cursor"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -145,8 +145,8 @@
                 app:layout_constraintTop_toBottomOf="@id/sectionResEditProduct"
                 android:layout_marginTop="20dp"
                 android:text="@string/editProduct"
-                android:background="@color/black"
-                android:textColor="@color/orange"/>
+                android:background="#FFBF00"
+                android:textColor="@color/black"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
