--- a/MysqlRecycler/app/src/main/res/layout/catalog_products.xml
+++ b/MysqlRecycler/app/src/main/res/layout/catalog_products.xml
@@ -6,30 +6,29 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CatalogCategories">
+        tools:context=".CatalogProducts">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/deleteAllCategories"
+                android:id="@+id/deleteAllProducts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
-                android:text="@string/deleteAllCategories"
-                android:background="#FFBF00"
+                android:text="@string/deleteAllProducts"
+                android:background="#E4E4E4"
                 android:textColor="@color/black"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerCategories"
+                android:id="@+id/recyclerProducts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/deleteAllCategories"
+                app:layout_constraintTop_toBottomOf="@id/deleteAllProducts"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"/>
+                app:layout_constraintEnd_toEndOf="parent"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
