--- a/MysqlRecycler/app/src/main/res/layout/catalog_products.xml
+++ b/MysqlRecycler/app/src/main/res/layout/catalog_products.xml
@@ -19,7 +19,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
                 android:text="@string/deleteAllProducts"
-                android:background="#E4E4E4"
+                android:background="#FFBF00"
                 android:textColor="@color/black"/>
 
             <androidx.recyclerview.widget.RecyclerView
